src/openforms/scss/components/builder/_builder.scss
@import '@fortawesome/fontawesome-free/scss/fontawesome';
@import '@fortawesome/fontawesome-free/scss/v4-shims.scss';
@import '@fortawesome/fontawesome-free/scss/brands';
@import '@fortawesome/fontawesome-free/scss/regular';
@import '@fortawesome/fontawesome-free/scss/solid';
/**
 * Builder is full minus font-awesome.
 *
 * See https://github.com/formio/formio.js/blob/master/gulpfile.js#L113
 */
@import 'formiojs/dist/formio.builder.css';
// since we include flatpickr in the global scope, we need to embed the CSS ourselves
@import 'flatpickr/dist/flatpickr.css';

.field-configuration {
  overflow: unset;
}

.field-configuration,
.form-definition {
  & > div:first-of-type {
    width: 100%;
  }
}

li.nav-item {
  list-style-type: none;
}

.card {
  &.form-builder-panel {
    padding: 0;
  }
}

// django wrapper
.aligned {
  .field-configuration,
  .formio.builder {
    max-width: 100%;
    label {
      float: none;
      width: initial;
    }
  }

  .row {
    margin: 0 !important;
  }
}

.formio-dialog,
.ck-body .ck.ck-balloon-panel,
div.flatpickr-calendar.open {
  z-index: 10000000;
}

.component-edit-container {
  .tab-pane.active {
    min-block-size: 50vh;

    &:has(.formio-component-content) {
      min-block-size: 0;
    }
  }
  .formio-component-content .tab-pane.active {
    min-block-size: 0;
  }

  .formio-component-tabs {
    display: flex;
    flex-direction: column;
    gap: 1.25rem;
  }

  // the select dropdowns are overflowing, which is hidden by the modal. this is the
  // easiest way to enforce they're always visible.
  overflow-y: auto;
}

.formio-builder-wrapper {
  padding-top: 10px;
}

[ref='editForm'],
[ref='component'] {
  .choices__list {
    &--dropdown {
      background-color: var(--body-bg);
      color: var(--body-fg);
      border-color: var(--border-color);
    }

    .choices__input {
      background-color: var(--form-input-bg);
      border-color: var(--border-color);
    }

    .choices__item--selectable.is-highlighted {
      background-color: var(--formio-dropdown-highlighted-bg);
    }
  }

  .choices__list + .choices__input {
    border: none;
    border-radius: unset;
    padding: 4px 0 4px 2px;
  }

  .choices__list:not(:empty) + .choices__input {
    width: 1ch;
  }
}

.builder-sidebar_scroll {
  top: 100px;
}

.formio.builder,
.component-preview {
  .col-form-label {
    @include ellipsis;
    max-width: 100%;
  }

  ul.list-group {
    display: block;
    padding-left: 0;
    padding-right: 0;
    margin: 0;
  }
}

// bootstrap competing with django admin form styling...
.react-form-create {
  :not([ref='editForm']) {
    .form-row {
      &,
      :not(select) {
        box-sizing: initial;
      }
    }

    .form-row {
      display: block;
      margin-left: 0;
      margin-right: 0;
    }
  }
}

// rjsf styling competing with bootstrap, competing with django admin.....
.admin-fieldset {
  margin-bottom: 0;

  .form-row {
    &,
    * {
      box-sizing: border-box !important;
    }
  }

  .form-row {
    display: block;
    margin-left: 0;
    margin-right: 0;
  }
}

.gu-transit {
  // #748 client requested increased contrast for this element
  // here we clobber formio's compiled 0.2 opacity of the drag-and-drop target indicator
  opacity: 0.7;

  &.drag-copy {
    border: solid 1px #ccc;
  }
}

// specifically for co-sign in form builder
.co-sign {
  .btn {
    border: solid 1px #ccc;
  }
}

// bootstrap overrides and dark theme...
.form-control {
  background-color: var(--form-input-bg);
  border-color: var(--border-color);
  color: var(--body-fg);

  &:focus {
    background-color: var(--form-input-bg);
    border-color: var(--body-quiet-color);
    color: var(--body-fg);
  }
}

.card {
  background-color: var(--body-bg);
  color: var(--body-fg);
  border-color: var(--border-color);

  @at-root body.view__body & {
    background-color: white;
  }
}

.card-header {
  color: var(--body-fg);
}

@media (prefers-color-scheme: dark) {
  .card-header {
    background-color: $color-dark;
  }

  .btn,
  .btn:hover {
    color: var(--body-fg);
  }

  .formio-dialog {
    background: rgba(0, 0, 0, 0.7);
    color: var(--body-fg);
  }

  .formio-dialog.formio-dialog-theme-default {
    .formio-dialog-content {
      background: var(--body-bg);
    }
  }

  .nav-tabs {
    .nav-link.active {
      color: var(--body-fg);
      background-color: var(--body-bg);
      border-color: var(--border-color) var(--border-color) var(--body-bg);
    }

    .nav-link {
      &:focus,
      &:hover {
        color: var(--body-fg);
        border-color: var(--hairline-color) var(--hairline-color) var(--body-bg);
      }
    }
  }

  .formio-button-add-another {
    color: var(--body-fg) !important;
  }
}

.form-row {
  .form-builder__container {
    color: var(--body-fg);
  }
}

